# GluCoEnv

./: .gitignore  CODE_OF_CONDUCT.md  README.md  benchmark_example.py  example_settings.yaml  ppo_example.py  pyproject.toml  setup.py  visualise_example.py
analysis/: analyse.sh  ppo_example.py
analysis/nci/: cgpu.sh  cpu.sh  cpucpu0.sh  cpucpu1.sh  cpucpu2.sh  cpucuda0.sh  cpucuda1.sh  cpucuda2.sh  cudacuda0.sh  cudacuda1.sh  cudacuda2.sh  gpu.sh  measure_performance.py  ppo_example.py
docs/source/: conf.py  index.rst
docs/source/algo/: G2P2C.rst  ppo.rst  sbb.rst
docs/source/guide/: action.rst  benchmark.rst  env.rst  environment.rst  example.rst  install.rst  metrics.rst  problem.rst  resources.rst  reward.rst  state.rst  visualisation.rst
glucoenv/: T1DEnv.py  __init__.py
glucoenv.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
glucoenv/agent/ppo/: config.yaml  models.py  ppo.py
glucoenv/agent/sbb/: benchmark.py
glucoenv/agent/utils/: buffers.py  reward_normalizer.py  utils.py
glucoenv/env/: core.py  env.py  memory.py  patient.py  pump.py  reward.py  scenario.py  sensor.py
glucoenv/settings/: settings.yaml
glucoenv/settings/scenarios/: benchmark.yaml  easy.yaml  hard.yaml  moderate.yaml
glucoenv/utils/: utils.py
glucoenv/visualiser/: T1DVisu.py
test_scripts/: measure.sh  measure_performance.py  t1dpatient.py  test_input.py  test_matrix.py  test_scenario_search.py  time_test.py
test_scripts/data/: 1000_cpu_288.csv  100_cpu_288.csv  10_cpu_288.csv  1_cpu_288.csv  3_cpu_3.csv
